更新邮件地址

--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
 	<developers>
 		<developer>
 			<name>Andrew Wong</name>
-			<email>wj.andrew@yahoo.com</email>
+			<email>wj.andrew#yahoo.com</email>
 			<organization>snowthinker</organization>
 			<organizationUrl>https://github.com/snowThinker</organizationUrl>
 		</developer>
