--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>pojo-helper</name>
-	<url>https://github.com/snowThinker/pojo-helper</url>
+	<url>https://github.com/snowyThinker/pojo-helper</url>
 	<description>Java POJO helps to simplify pojo convert and mask</description>
 
 	<properties>
@@ -46,6 +46,11 @@
 		    <artifactId>logback-classic</artifactId>
 		    <version>1.2.3</version>
 		    <scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.11.2</version>
 		</dependency>
 	</dependencies>
 
