--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,16 @@
 		    <version>1.18.8</version>
 		    <scope>provided</scope>
 		</dependency>
-		
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.6.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-launcher</artifactId>
+			<version>1.6.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
