--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.github.snowthinker</groupId>
+	<groupId>io.github.snowythinker</groupId>
 	<artifactId>pojo-helper</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.5-RELEASE</version>
 	<packaging>jar</packaging>
 
 	<name>pojo-helper</name>
